--- a/flyway/src/main/resources/application.yml
+++ b/flyway/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     baseline-on-migrate: true
     baseline-version: 1
     locations: classpath:db/migration/schema
-    url: jdbc:mysql://localhost:3306/hot6
+    url: jdbc:mysql://localhost:3306/tdsn
     schemas: test
-    user: root
-    password: benx0508!
+    user: ${mysqlUsername}
+    password: ${mysqlPassword}
