--- a/api/build.gradle
+++ b/api/build.gradle
@@ -5,7 +5,11 @@ plugins {
 ext {
     set('flywayVersion', '9.4.0')
     set('jupiterVersion', '5.9.0')
+    set('jasyptVersion', '3.0.3')
 }
+
+apply plugin: "com.google.cloud.tools.jib"
+apply from: "jib.gradle"
 
 group 'com.tdsn'
 version '1.0-SNAPSHOT'
@@ -19,6 +23,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-rest'
     testImplementation project(':core')
 
+    /* jasypt 관련 */
+    implementation "com.github.ulisesbocchio:jasypt-spring-boot-starter:${jasyptVersion}"
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:${jupiterVersion}"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${jupiterVersion}"
