--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ plugins {
     id 'application'
     id 'distribution'
     id 'jacoco'
+    id 'com.google.cloud.tools.jib' version '3.2.1'
 }
 
 ext {
