fix: querydsl 설정 추가

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -46,6 +46,9 @@ sourceSets {
     main.java.srcDir querydslDir
 }
 configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
     querydsl.extendsFrom compileClasspath
 }
 
