--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -4,7 +4,7 @@ env:
 on:
   push:
     branches:
-      - develop
+      - hotfix/**
 
 name: Deploy Dev Phase
 
@@ -34,7 +34,7 @@ jobs:
           java-version: 11
 
       - name: Build with Gradle
-        run: ./gradlew :api:jib
+        run: chmod +x gradlew ./gradlew :api:jib
 
       - name: Download task definition
         run: |
