--- a/batch/build.gradle
+++ b/batch/build.gradle
@@ -4,11 +4,7 @@ plugins {
 
 ext {
     set('jupiterVersion', '5.9.0')
-    set('jasyptVersion', '3.0.3')
 }
-
-apply plugin: "com.google.cloud.tools.jib"
-apply from: "jib.gradle"
 
 group 'com.tdsn'
 version '1.0-SNAPSHOT'
@@ -22,8 +18,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-rest'
     testImplementation project(':core')
 
-    /* jasypt 관련 */
-    implementation "com.github.ulisesbocchio:jasypt-spring-boot-starter:${jasyptVersion}"
+    //shedlock
+    implementation 'net.javacrumbs.shedlock:shedlock-spring:4.14.0'
+    implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:4.14.0'
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:${jupiterVersion}"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${jupiterVersion}"
