Changes by jy.nam

--- a/flyway/build.gradle
+++ b/flyway/build.gradle
@@ -1,18 +1,18 @@
 buildscript {
     ext {
-        def localProperties = new Properties()
-        def localPropertiesFile = rootProject.file('local.properties')
-        if (localPropertiesFile.exists()) {
-            localPropertiesFile.withReader('UTF-8') { reader ->
-                localProperties.load(reader)
-            }
-        }
+//        def localProperties = new Properties()
+//        def localPropertiesFile = rootProject.file('local.properties')
+//        if (localPropertiesFile.exists()) {
+//            localPropertiesFile.withReader('UTF-8') { reader ->
+//                localProperties.load(reader)
+//            }
+//        }
+//
+//        def mysqlUsername = localProperties.getProperty('mysql.userName')
+//        def mysqlPassword = localProperties.getProperty('mysql.userPassword')
 
-        def mysqlUsername = localProperties.getProperty('mysql.userName')
-        def mysqlPassword = localProperties.getProperty('mysql.userPassword')
-
-        set('mysqlUsername', mysqlUsername)
-        set('mysqlPassword', mysqlPassword)
+        set('mysqlUsername', "tdns")
+        set('mysqlPassword', "1234")
         set('flywayVersion', '6.5.7')
     }
 }
