--- a/flyway/src/main/resources/application.yml
+++ b/flyway/src/main/resources/application.yml
@@ -12,6 +12,6 @@ spring:
     baseline-version: 1
     locations: classpath:db/migration/schema
     url: jdbc:mysql://localhost:3306/tdsn
-    schemas: test
-    user: ${mysqlUsername}
-    password: ${mysqlPassword}
+    user: root
+    password:
+    driver-class-name: com.mysql.cj.jdbc.Driver
