--- a/flyway/src/main/resources/application.yml
+++ b/flyway/src/main/resources/application.yml
@@ -12,6 +12,5 @@ spring:
     baseline-version: 1
     locations: classpath:db/migration/schema
     url: jdbc:mysql://localhost:3306/tdsn
-    user: root
+    user:
     password:
-    driver-class-name: com.mysql.cj.jdbc.Driver
