--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -11,8 +11,8 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update
-    generate-ddl: true
+      ddl-auto: none
+    generate-ddl: false
     database: mysql
     database-platform: org.hibernate.spatial.dialect.mysql.MySQL56InnoDBSpatialDialect
   redis:
