fix : thumbnail, profile image url 받아오기

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -34,6 +34,7 @@ spring:
             scope:
               - profile_nickname
               - account_email
+              - profile_image
         provider:
           kakao:
             authorization-uri: https://kauth.kakao.com/oauth/authorize
