#15 ddl-auto validate 로 변경

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: none
+      ddl-auto: validate
     generate-ddl: false
     database: mysql
     database-platform: org.hibernate.spatial.dialect.mysql.MySQL56InnoDBSpatialDialect
