--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -4,7 +4,7 @@ env:
 on:
   push:
     branches:
-      - develop
+      - feature/*
 
 name: Deploy Dev Phase
 
@@ -14,6 +14,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Migrate Dev DB With Flyway
+        run: ./gradlew -Dflyway.placeholders.environment=dev :flyway:flywayMigrate
+
       - name: Checkout
         uses: actions/checkout@v1
 
