퀴즈 ERD 설계 (#16)
* feat: base entity 생성

* feat: 언더바 설정 추가

* chore: 브렌치 변경

* chore: 브렌치 변경

* feat: 패키지 변경 및 퀴즈 엔티티 생성

* feat: db 설정 추가

* chore: 브렌치 변경

* chore: flyway 설정 원복

* chore: 기본 설정 제거

* refactor: base entity 통일

* refactor: 도메인 구조 통일

* chore: 필요없는 코멘트 삭제

* refactor: 리뷰 반영

* chore: 이름 변경

* chore: 이름 변경

* feat: flyway 스크립트 생성

* feat: 마이그레이션 환경 분리

* chore: cicd 스크립트 추가

* chore: cicd 스크립트 추가

* chore: 트리거 브렌치 원복

* chore: url prefix 추가

* chore: 트리거 브렌치 원복

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -33,6 +33,9 @@ jobs:
         with:
           java-version: 11
 
+      - name: Migrate Dev DB With Flyway
+        run: ./gradlew -Dflyway.placeholders.environment=dev :flyway:flywayMigrate
+
       - name: Build with Gradle
         run: ./gradlew :api:jib
 
