#9 소셜 로그인 구현 (#18)
* DB 연결 문제

* Changes by jy.nam

* Kakao Social 인증

* Changes by jy.nam

* 컨벤션

* :sparkles: User Entity 사용자 name 수정

* :poop: Oauth2 인증 후 사용자 닉네임 저장

* fix : User Entity 수정

* fix : thumbnail, profile image url 받아오기

* :sparkles: 사용자 닉네임 설정

* :bug: 사용자 닉네임 설정

* :bug: ContextHolder에서 UserDTO 가져오는 기존 로직으로 변경

* :bug: user 정보 변경 파라미터 email에서 id로 변경

* :recycle: 프로젝트 초기 메서드 제거

* Changes by jy.nam

* :bug: 각 yml별 설정 지정 및 encrypt

* :bug: flyway build.gradle 원복

* :pencil2: 간격 및 불필요 로그 제거

* :poop: SilentApplicationErrorException으로 변경 (에러 code 재 지정 필요함)

* :recycle: 필수 오버라이드 항목 반환값 null 주석

* :sparkles: 중복된 닉네임 확인

* :recycle: 초기 세팅 메서드 제거

* :recycle: var 키워드 반환

* :bug: auto-increment를 20000부터 수정

* :pencil2: 아이디 비밀번호 원복

* :bug: 로그인 페이지 연결

* :sparkles: Exception 경우 추가

* :recycle: 사용 메서드 단순화

* :recycle: Exception 처리

* :pencil2: private 처리

* :bug: Jwt 중복 generate 제거

* :bug: Jwt 중복 generate 제거

* :sparkles: Jwt accessToken 만료 시 refreshToken 기반 갱신

* #9 리뷰 받은 내용 수정

* #9 로컬 비밀 번호 제거

* :bug: columnDefinition 수정

* :sparkles: 사용자 정보 조회 API

* :bug: Error내용 body로 반환 및 refreshToken 만료 오작동 수정

* :pencil2: pull 관련 내용 수정

* :sparkles: logout 시 refreshToken 값 "logout"으로 변경

Co-authored-by: south-daria <jy.nam@weversecompany.com>
Co-authored-by: Daria Nam <69445946+south-daria@users.noreply.github.com>

--- a/api/src/main/resources/application-local.yml
+++ b/api/src/main/resources/application-local.yml
@@ -1,9 +1,17 @@
+# default profile
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/tdsn
     username:
     password:
     driver-class-name: com.mysql.cj.jdbc.Driver
+  security:
+    oauth2:
+      front-redirect-uri: http://localhost:8080/login/kakaoauth
+      client:
+        registration:
+          kakao:
+            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
 url:
   prefix: http://localhost:822 #임시 프론트 url 확인 필요
   study-path: /study
