--- a/api/src/main/resources/application-prod.yml
+++ b/api/src/main/resources/application-prod.yml
@@ -4,6 +4,13 @@ spring:
     username:
     password:
     driver-class-name: com.mysql.cj.jdbc.Driver
+  security:
+    oauth2:
+      front-redirect-uri: https://tokstudy.com/login/kakaoauth
+      client:
+        registration:
+          kakao:
+            redirect-uri: https://tokstudy.com/login/oauth2/code/kakao
 url:
   prefix: <prod url>
   study-path: /study
