:bug: redirect Uri 수정

--- a/api/src/main/resources/application-dev.yml
+++ b/api/src/main/resources/application-dev.yml
@@ -10,7 +10,7 @@ spring:
       client:
         registration:
           kakao:
-            redirect-uri: https://tokstudy.com/login/oauth2/code/kakao
+            redirect-uri: https://api.tokstudy.com/login/oauth2/code/kakao
 url:
   prefix: <dev url>
   study-path: /study
