--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -15,9 +15,6 @@ spring:
     generate-ddl: false
     database: mysql
     database-platform: org.hibernate.spatial.dialect.mysql.MySQL56InnoDBSpatialDialect
-  redis:
-    host: 127.0.0.1
-    port: 6379
 
   # kakao login
   security:
@@ -77,8 +74,8 @@ cloud:
 
 # security
 security:
-  permit-url: /api-docs/**,/configuration/**,/swagger-ui/**,/webjars/**,/ping,/swagger/**,/swagger/index.html, /login/**, /api/v1/user/renew
-  filter-skip: /ping,/api-docs,/configuration,/swagger,/swagger-ui,/webjars,/swagger/**
+  permit-url: /api-docs/**,/configuration/**,/swagger-ui/**,/webjars/**,/actuator/health,/swagger/**,/swagger/index.html, /login/**, /api/v1/user/renew
+  filter-skip: /actuator/health,/api-docs,/configuration,/swagger,/swagger-ui,/webjars,/swagger/**
 
 # swagger
 springdoc:
