--- a/api/src/main/resources/application-dev.yml
+++ b/api/src/main/resources/application-dev.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   security:
     oauth2:
-      front-redirect-uri: https://tokstudy.com/login/kakaoauth
+      front-redirect-uri: http://localhost:3000/login/kakaoauth
       client:
         registration:
           kakao:
