:rocket: 빌드 시 build phase dev로 변경

--- a/flyway/build.gradle
+++ b/flyway/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         String encryptorPassword = System.getenv("JASYPT_ENCRYPTOR_PASSWORD")
         set('encryptorPassword', encryptorPassword)
 
-        String buildPhase = System.getProperty("flyway.placeholders.environment", "dev")
+        String buildPhase = System.getProperty("flyway.placeholders.environment", "local")
         set('buildPhase', buildPhase)
     }
     dependencies {
