:construction_worker: push / pr 날리면 빌드 체크 스크립트 작성

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -55,3 +55,8 @@ configurations {
 compileQuerydsl {
     options.annotationProcessorPath = configurations.querydsl
 }
+
+
+bootJar {
+    enabled = false
+}
