:bug: api.tokstudy.com 으로 요청 시 tokstudy.com으로 redirect 응답

--- a/api/src/main/resources/application-dev.yml
+++ b/api/src/main/resources/application-dev.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   security:
     oauth2:
-      front-redirect-uri: /login/kakaoauth
+      localhost: http://localhost:3000
       client:
         registration:
           kakao:
