--- a/api/src/main/resources/application-local.yml
+++ b/api/src/main/resources/application-local.yml
@@ -7,7 +7,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   security:
     oauth2:
-      front-redirect-uri: /login/kakaoauth
+      localhost: http://localhost:8080
       client:
         registration:
           kakao:
