:bug: request body 추가

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -20,6 +20,7 @@ spring:
   security:
     front-redirect-uri: /login/kakaoauth
     oauth2:
+      front-redirect-uri: /login/kakaoauth
       client:
         registration:
           kakao:
