#49 인증정보 없을 때 exception 발생 시키기 (#60)
* :construction: credential 및 쿠키 방식 토큰 전달

* :bug: 인증 정보 없는 경우 redirect 아닌 exception 전달

* :test_tube: 인증 관련 refresh 테스트 중

* :twisted_rightwards_arrows: merged changes

* :bug: 로그인 실패시 redirect 취소

* :fire: 필요없는 로직

* :bug: yml front-redirect-url 중복 제거

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -20,7 +20,6 @@ spring:
   security:
     front-redirect-uri: /login/kakaoauth
     oauth2:
-      front-redirect-uri: /login/kakaoauth
       client:
         registration:
           kakao:
@@ -76,8 +75,8 @@ cloud:
 
 # security
 security:
-  permit-url: /api-docs/**,/configuration/**,/swagger-ui/**,/webjars/**,/actuator/health,/swagger/**,/swagger/index.html, /login/**, /api/v1/user/renew
-  filter-skip: /actuator/health,/api-docs,/configuration,/swagger,/swagger-ui,/webjars,/swagger/**, /api/v1/user/renew
+  permit-url: /api-docs/**,/configuration/**,/swagger-ui/**,/webjars/**,/actuator/health,/swagger/**,/swagger/index.html,/login/**,/api/v1/user/renew
+  filter-skip: /actuator/health,/api-docs,/configuration,/swagger,/swagger-ui,/webjars,/swagger/**,/api/v1/user/renew,/login
 
 # swagger
 springdoc:
