--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -68,7 +68,7 @@ cloud:
 
 # security
 security:
-  permit-url: /api-docs/**,/configuration/**,/swagger-ui/**,/webjars/**,/actuator/health,/swagger/**,/swagger/index.html,/login/**,/api/v1/user/renew
+  permit-url: /api-docs/**,/configuration/**,/swagger-ui/**,/webjars/**,/actuator/health,/swagger/**,/swagger/index.html,/login/**,/api/v1/user/renew,/api/v1/studies/*/enter
   filter-skip: /actuator/health,/api-docs,/configuration,/swagger,/swagger-ui,/webjars,/swagger/**,/api/v1/user/renew,/login
 
 # swagger
