--- a/build.gradle
+++ b/build.gradle
@@ -86,8 +86,8 @@ subprojects { subproject ->
 
         dependencies {
             /* spring starter */
-            implementation('org.springframework.boot:spring-boot-starter-web')
-            implementation 'org.springframework.boot:spring-boot-starter-webflux'
+            implementation("org.springframework.boot:spring-boot-starter-web")
+            implementation("org.springframework.boot:spring-boot-starter-webflux")
             implementation 'org.springframework.boot:spring-boot-starter-validation'
             implementation 'org.springframework.boot:spring-boot-starter-security'
             implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
@@ -144,7 +144,6 @@ subprojects { subproject ->
     }
 }
 
-
 tasks.named('test') {
     useJUnitPlatform()
     finalizedBy jacocoTestReport
@@ -159,8 +158,6 @@ jacocoTestReport {
     }
 }
 
-
 jacoco {
     toolVersion = "0.8.8"
 }
-
