fix: 사용하지 않는 controller -> legacy prefix 교체, 추후 삭제 진행 필요.

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -87,7 +87,7 @@ springdoc:
     disable-swagger-default-url: true
     display-query-params-without-oauth2: true
   paths-to-match:
-    - /api/v2/**
+    - /api/**
 
 # slack
 monitor:
